exports[`Component: SearchContainer when the search prop changes should call the search action with the new value 1`] = `
Array [
  "?q=test",
]
`;

exports[`Component: SearchContainer when the search prop changes should call the search action with the new value 2`] = `
Array [
  "?q=foobar",
]
`;

exports[`Component: SearchContainer when the search prop is present should call the search action 1`] = `
Array [
  "?q=test",
]
`;

exports[`Component: SearchContainer when the searchTerm is falsey should not render the pagination or results 1`] = `
<div>
  <div
    className="Container_10ki57k-o_O-SearchContainer_header_qw8dio">
    <div
      className="Container_inner_ydook-o_O-Container_padding_1e7x1pk">
      <div
        className="SearchHeader_16l6lg7">
        <div
          className="SearchHeader_text_lmjs6u">
          <h1
            className="SearchHeader_title_1cswrtu">
            GitHub User Search
          </h1>
          <p
            className="SearchHeader_desc_h76sf7">
            Browse users and their profiles via 
            <a
              href="https://developer.github.com/v3/">
              the GitHub API
            </a>
          </p>
        </div>
        <div
          className="SearchHeader_children_q7zmln">
          <form
            className="SearchForm_13hv8io"
            onSubmit={[Function]}>
            <label
              className="hiddenVisually_1qrrm43"
              htmlFor="searchInput">
              Search for a user
            </label>
            <input
              className="SearchForm_input_9ohod8"
              id="searchInput"
              onChange={[Function]}
              placeholder="Search for a user, e.g. simonsmith"
              type="text"
              value="" />
            <button
              className="SearchForm_btn_tixetf"
              type="submit">
              <svg />
              <span
                className="hiddenVisually_1qrrm43">
                Submit
              </span>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
  <div
    className="Container_10ki57k">
    <div
      className="Container_inner_ydook" />
  </div>
</div>
`;
